tests/machine/x/cobol/list_nested_assign.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/list_nested_assign.cob:14: error: 'MATRIX-E2-E1' is not defined

