tests/machine/x/cobol/list_nested_assign.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. LIST-NESTED-ASSIGN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 MATRIX.
           05 E1-E1 PIC 9 VALUE 1.
           05 E1-E2 PIC 9 VALUE 2.
           05 E2-E1 PIC 9 VALUE 3.
           05 E2-E2 PIC 9 VALUE 4.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE MATRIX-E2-E1 = 5
       COMPUTE TMP = MATRIX-E2-E1
       DISPLAY TMP
       STOP RUN.
